30. Gallery description is overflowing, it should be fixed from css.

--- a/WereViewApp/Content/Less/front-developer.less
+++ b/WereViewApp/Content/Less/front-developer.less
@@ -4,7 +4,7 @@ body {
     font-family: Ubuntu,"Helvetica Neue", Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: subpixel-antialiased;
 }
- 
+
 body #wrap .app-details-page {
     .ubuntu-font;
 }
@@ -24,6 +24,7 @@ body #wrap .app-details-page {
     font-weight: normal;
     text-transform: none;
     .padding(7px, 12px, 7px,12px);
+    border: none;
 }
 
 
@@ -158,9 +159,7 @@ label.control-label {
     }
 }
 
-.btn {
-    border: none;
-}
+
 
 .paragraph-end {
     height: 19px;
@@ -375,11 +374,19 @@ label.control-label {
         color: @app-description-color;
         .width(385px);
         text-align: left;
+        -ms-text-overflow: ellipsis !important;
+        -o-text-overflow: ellipsis !important;
+        text-overflow: ellipsis !important;
+        white-space: normal;
 
         p {
             text-align: justify;
             -ms-word-wrap: break-word;
             word-wrap: break-word;
+            -ms-text-overflow: inherit;
+            -o-text-overflow: inherit;
+            text-overflow: inherit;
+            white-space: inherit;
         }
     }
 
@@ -1181,7 +1188,7 @@ q:after {
     }
 }
 
-//share-buttons 
+//share-buttons
 .share-btn {
     float: right;
     .margin-top(19px);
@@ -1272,7 +1279,7 @@ q:after {
 
     @media (min-width:@screen-sm) {
         bottom: 9px;
-    } 
+    }
 }
 
 @import "blog-page.less";
